H.264 is no longer a context menu item in Chrome.  It is now available as a Streaming Quality option in any browser that supports web workers, fetch, and ReadableStream. H.264 Streaming 0 will be the default Streaming Quality choice for new users, falling back to Jpeg Best Quality if H.264 is not available.  Streaming 1 and 2 are also available as H.264 quality options. H.264 clip playback now responds to speed changes, quality changes, and forward/reverse toggle. When an H.264 clip ends, the seek position is moved to the actual end even if the last frame wasn't aligned perfectly with the end of the seek bar. Autoplay and looping playback now works with H.264, as the end of the clip is detected now. H.264 decoder errors are reported to the user and handled somewhat gracefully. H.264 playback will no longer resume itself when it is supposed to be paused. Dropdown box text can no longer overflow outside the bounds of the dropdown box.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -1164,6 +1164,7 @@ div.icon, a.icon
 	height: 39px;
 	padding-left: 10px;
 	cursor: pointer;
+	overflow: hidden;
 }
 
 	.dropdownBox.disabled
@@ -1202,6 +1203,7 @@ div.icon, a.icon
 	font-size: 16px;
 	line-height: 39px;
 	color: #FFFFFF;
+    white-space: nowrap;
 }
 
 .sizeMedium .dropdownLabel
